start 1.20.6 port